fixed collapsed node

--- a/pod-peek-ui/src/Graph/CustomNodes/PodNode.css
+++ b/pod-peek-ui/src/Graph/CustomNodes/PodNode.css
@@ -152,17 +152,13 @@
 }
 
 .pod-handle.left.collapsed {
-  left: -9px;
+  left: -33.5px;
+  top: -16px;
 }
 
 .pod-handle.right.collapsed {
-  right: -9px;
-}
-
-/* Collapsed handles */
-.pod-handle.collapsed {
-  position: absolute;
-  top: 72.5%;
+  right: -33.5px;
+  top: -16px;
 }
 
 /* === Collapsed Label === */
